Publish optimized client 2.9.4 and loader 1.2.7 for Minecraft 26.3